manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  annotations:
    kubernetes.io/ingress.className: "nginx"
spec:
  rules:
    - host: app.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: school-homework
                port:
                  number: 5000
